MDEV-25078: ALTER INDEX is inconsistent with ADD/DROP/RENAME index

Support IF EXISTS in the command that alter index visibility:

  ALTER TABLE ALTER (KEY|INDEX) [IF EXISTS] index_name [NOT] IGNORED